feat: add RiakExecutor class